--- a/INICIALES_PY_EXA1.ipynb
+++ b/INICIALES_PY_EXA1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIsr41d/ZYOxsDSaUIz84g",
+      "authorship_tag": "ABX9TyNQ0/3/EhGqfW9WuuVn+qfu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,38 +28,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "source": [],
+      "metadata": {
+        "id": "BlxtHObP7h8t"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "funcion que retorne una lista con 30 numeros generados aleatorios (20-100) no repetidos"
+      ],
+      "metadata": {
+        "id": "_w8Dtl-N7_l4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "k_Pmp4bG5P-E",
-        "outputId": "1a0b82e3-f403-43b1-8e84-e5b42e34d074"
+        "outputId": "06c86433-b284-49c1-f8e8-004128f1b120"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ingresa un número para calcular su factorial:3\n",
-            "El factorial de 3 es: 6\n"
+            "[20, 21, 23, 25, 29, 32, 33, 34, 37, 41, 44, 47, 50, 52, 59, 64, 68, 69, 71, 72, 75, 77, 78, 81, 84, 93, 94, 95, 96, 100]\n"
           ]
         }
       ],
       "source": [
-        "def calcular_factorial():\n",
-        "    try:\n",
-        "        numero = int(input(\"Ingresa un número para calcular su factorial:\"))\n",
-        "        if numero < 0:\n",
-        "            print(\"No se puede calcular el factorial, intente nuevamente\")\n",
-        "        else:\n",
-        "            factorial = 1\n",
-        "            for i in range(2, numero + 1):\n",
-        "                factorial *= i\n",
-        "            print(f\"El factorial de {numero} es: {factorial}\")\n",
-        "    except ValueError:\n",
-        "        print(\"Por favor, ingresa un número entero válido.\")\n",
-        "calcular_factorial()"
+        "import random\n",
+        "\n",
+        "def generar_lista_aleatoria():\n",
+        "    numeros_aleatorios = set()\n",
+        "\n",
+        "    while len(numeros_aleatorios) < 30:\n",
+        "        numero = random.randint(20, 100)\n",
+        "        numeros_aleatorios.add(numero)\n",
+        "\n",
+        "    return list(numeros_aleatorios)\n",
+        "\n",
+        "lista_aleatoria = generar_lista_aleatoria()\n",
+        "print(lista_aleatoria)"
       ]
     }
   ]
